Add HRPs for node tx types

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,11 +5,13 @@
         "fuzz-tests/Cargo.toml",
     ],
     "cSpell.words": [
+        "accesscontroller",
         "bech",
         "bincode",
         "btreemap",
         "btreeset",
         "callframe",
+        "consensusmanager",
         "debuggability",
         "Decompilation",
         "decompile",
@@ -23,12 +25,15 @@
         "instantiatable",
         "Instrumenter",
         "Invokable",
+        "keyvaluestore",
+        "ledgertransaction",
         "notarizedtransaction",
         "persistable",
         "Presecurified",
         "radiswap",
         "repr",
         "Rocksdb",
+        "roundupdatetransaction",
         "ruid",
         "Sbor",
         "Scrypto",
@@ -37,6 +42,8 @@
         "signedintent",
         "Substate",
         "substates",
+        "systemtransaction",
+        "transactiontracker",
         "txid",
         "undeposited",
         "unregistration",
