--- a/radix-engine-queries/Cargo.toml
+++ b/radix-engine-queries/Cargo.toml
@@ -13,12 +13,14 @@ transaction = { path = "../transaction", default-features = false }
 utils = { path = "../utils", default-features = false }
 itertools = { version = "0.10.3", default-features = false }
 hex = { version = "0.4.3", default-features = false }
+strum = { version = "0.25.0", features = ["derive"] }
+paste = "1.0.13"
 
 [features]
 # You should enable either `std` or `alloc`
 default = ["std", "moka"]
-std = ["hex/std", "sbor/std", "transaction/std", "radix-engine-interface/std", "radix-engine-store-interface/std", "utils/std"]
-alloc = ["hex/alloc", "sbor/alloc", "transaction/alloc", "radix-engine-interface/alloc", "radix-engine-store-interface/alloc", "utils/alloc"]
+std = ["radix-engine/std", "hex/std", "sbor/std", "transaction/std", "radix-engine-interface/std", "radix-engine-store-interface/std", "utils/std"]
+alloc = ["radix-engine/alloc", "hex/alloc", "sbor/alloc", "transaction/alloc", "radix-engine-interface/alloc", "radix-engine-store-interface/alloc", "utils/alloc"]
 
 moka = ["radix-engine/moka"]
 lru = ["radix-engine/lru"]
