--- a/transaction-scenarios/Cargo.toml
+++ b/transaction-scenarios/Cargo.toml
@@ -14,12 +14,13 @@ transaction = { path = "../transaction", default-features = false }
 utils = { path = "../utils", default-features = false }
 itertools = { version = "0.10.3", default-features = false }
 hex = { version = "0.4.3", default-features = false }
+walkdir = "2.3.3"
 
 [features]
 # You should enable either `std` or `alloc`
 default = ["std"]
 std = ["hex/std", "sbor/std", "transaction/std", "radix-engine/std", "radix-engine/moka", "radix-engine-stores/std", "radix-engine-interface/std", "radix-engine-store-interface/std", "utils/std"]
-alloc = ["hex/alloc", "sbor/alloc", "transaction/alloc", "radix-engine/alloc", "radix-engine/lru",  "radix-engine-stores/alloc", "radix-engine-interface/alloc", "radix-engine-store-interface/alloc", "utils/alloc"]
+alloc = ["hex/alloc", "sbor/alloc", "transaction/alloc", "radix-engine/alloc", "radix-engine/lru", "radix-engine-stores/alloc", "radix-engine-interface/alloc", "radix-engine-store-interface/alloc", "utils/alloc"]
 
 # Ref: https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
 [lib]
