--- a/radix-engine-tests/tests/blueprints/Cargo.toml
+++ b/radix-engine-tests/tests/blueprints/Cargo.toml
@@ -1,6 +1,5 @@
 [workspace]
 members = [
-    "access_rules",
     "address",
     "allocated_address",
     "arguments",
@@ -37,6 +36,7 @@ members = [
     "reentrancy",
     "reference",
     "resource",
+    "role_assignment",
     "static_dependencies",
     "static_dependencies2",
     "stored_external_component",
