--- a/radix-engine-tests/Cargo.toml
+++ b/radix-engine-tests/Cargo.toml
@@ -71,3 +71,5 @@ flamegraph = []
 resource_tracker = ["dep:radix-engine-profiling", "resources-tracker-macro/resource_tracker", "radix-engine/resource_tracker", "radix-engine-common/resource_tracker"]
 dump_manifest_to_file = ["transaction/dump_manifest_to_file"]
 rocksdb = ["scrypto-unit/rocksdb"]
+parnum_hashed = ["scrypto-unit/parnum_hashed"]
+parnum_not_hashed = ["scrypto-unit/parnum_not_hashed"]
