--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -227,6 +227,7 @@ jobs:
     - name: Run tests
       run: |
         cargo nextest run \
+          --no-run \
           --features wasmer \
           -p radix-engine \
           -p radix-engine-tests
