Added large package (1MiB) publish test

--- a/radix-engine-tests/tests/blueprints/Cargo.toml
+++ b/radix-engine-tests/tests/blueprints/Cargo.toml
@@ -19,6 +19,7 @@ members = [
     "fee_reserve_states",
     "kernel",
     "kv_store",
+    "large_package",
     "leaks",
     "local_component",
     "local_recursion",
