--- a/radix-engine-tests/tests/blueprints/large_package/Cargo.toml
+++ b/radix-engine-tests/tests/blueprints/large_package/Cargo.toml
@@ -10,7 +10,7 @@ scrypto = { path = "../../../../scrypto" }
 package1 = { package = "non_fungible", path = "../non_fungible" }
 
 # If needed change package and path parameters
-package2 = { package = "stored_resource", path = "../stored_resource" }
+package2 = { package = "publish_package", path = "../publish_package" }
 
 [dev-dependencies]
 radix-engine = { path = "../../../../radix-engine" }
