Add failing heap node lock substate test

--- a/radix-engine-tests/tests/blueprints/Cargo.toml
+++ b/radix-engine-tests/tests/blueprints/Cargo.toml
@@ -16,7 +16,6 @@ members = [
     "fake_bucket",
     "fee",
     "fee_reserve_states",
-    "kernel",
     "kv_store",
     "large_package",
     "leaks",
@@ -46,6 +45,7 @@ members = [
     "vault",
     "royalty",
     "royalty-auth",
+    "scrypto_env",
     "transaction_limits",
     "transaction_runtime",
     "tx_processor_access",
