--- a/radix-engine-queries/Cargo.toml
+++ b/radix-engine-queries/Cargo.toml
@@ -13,7 +13,7 @@ transaction = { path = "../transaction", default-features = false }
 utils = { path = "../utils", default-features = false }
 itertools = { version = "0.10.3", default-features = false }
 hex = { version = "0.4.3", default-features = false }
-paste = "1.0.13"
+paste = { version = "1.0.13" }
 
 [features]
 # You should enable either `std` or `alloc`
