--- a/transaction-scenarios/Cargo.toml
+++ b/transaction-scenarios/Cargo.toml
@@ -10,6 +10,7 @@ radix-engine-stores = { path = "../radix-engine-stores", default-features = fals
 radix-engine-store-interface = { path = "../radix-engine-store-interface", default-features = false }
 radix-engine-constants = { path = "../radix-engine-constants", default-features = false }
 radix-engine-interface = { path = "../radix-engine-interface", default-features = false }
+scrypto = { path = "../scrypto", default-features = false }
 transaction = { path = "../transaction", default-features = false }
 utils = { path = "../utils", default-features = false }
 itertools = { version = "0.10.3", default-features = false }
@@ -19,8 +20,8 @@ walkdir = "2.3.3"
 [features]
 # You should enable either `std` or `alloc`
 default = ["std"]
-std = ["hex/std", "sbor/std", "transaction/std", "radix-engine/std", "radix-engine/moka", "radix-engine-stores/std", "radix-engine-interface/std", "radix-engine-store-interface/std", "utils/std"]
-alloc = ["hex/alloc", "sbor/alloc", "transaction/alloc", "radix-engine/alloc", "radix-engine/lru", "radix-engine-stores/alloc", "radix-engine-interface/alloc", "radix-engine-store-interface/alloc", "utils/alloc"]
+std = ["hex/std", "sbor/std", "scrypto/std", "transaction/std", "radix-engine/std", "radix-engine/moka", "radix-engine-stores/std", "radix-engine-interface/std", "radix-engine-store-interface/std", "utils/std"]
+alloc = ["hex/alloc", "sbor/alloc", "scrypto/alloc", "transaction/alloc", "radix-engine/alloc", "radix-engine/lru", "radix-engine-stores/alloc", "radix-engine-interface/alloc", "radix-engine-store-interface/alloc", "utils/alloc"]
 
 # Ref: https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
 [lib]
