Add fee to large_package test

--- a/radix-engine-tests/tests/blueprints/large_package/Cargo.toml
+++ b/radix-engine-tests/tests/blueprints/large_package/Cargo.toml
@@ -9,6 +9,7 @@ scrypto = { path = "../../../../scrypto" }
 
 non_fungible = { path = "../non_fungible" }
 fake_bucket = { path = "../fake_bucket" }
+fee = { path = "../fee" }
 
 [dev-dependencies]
 radix-engine = { path = "../../../../radix-engine" }
