Prepare for more fuzz targets

--- a/fuzz-tests/Cargo.toml
+++ b/fuzz-tests/Cargo.toml
@@ -47,7 +47,7 @@ members = ["."]
 
 [[bin]]
 name = "transaction"
-path = "src/transaction.rs"
+path = "src/bin/transaction.rs"
 #test = false
 doc = false
 
