--- a/radix-engine/Cargo.toml
+++ b/radix-engine/Cargo.toml
@@ -27,7 +27,7 @@ paste = { version = "1.0.13" }
 wasmparser = { version = "0.107.0", default-features = false }
 
 # WASM instrumentation
-wasm-instrument = { git = "https://github.com/radixdlt/wasm-instrument", branch = "radix-master", default-features = false,  features = ["ignore_custom_section"]}
+wasm-instrument = { git = "https://github.com/radixdlt/wasm-instrument", branch = "improvements/error_handling", default-features = false,  features = ["ignore_custom_section"]}
 
 # WASM execution
 # - Wasmi is a WASM interpreter that supports WebAssembly MVP
