--- a/.github/workflows/cpu_instructions.yml
+++ b/.github/workflows/cpu_instructions.yml
@@ -3,7 +3,7 @@ run-name: QEMU costing - CPU instructions, branch = ${{ github.ref_name }}
 
 on:
   workflow_dispatch:
-  # pull_request:
+  pull_request: # Temporarily enabled to run for this PR.
 
 env:
   CARGO_TERM_COLOR: always
