Add failing test

--- a/radix-engine-tests/tests/blueprints/Cargo.toml
+++ b/radix-engine-tests/tests/blueprints/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
     "address",
+    "address_reservation",
     "allocated_address",
     "arguments",
     "balance_changes",
