Update assets and fix tests

--- a/radix-engine-tests/tests/blueprints/Cargo.toml
+++ b/radix-engine-tests/tests/blueprints/Cargo.toml
@@ -28,6 +28,7 @@ members = [
     "module",
     "non_fungible",
     "package",
+    "package_invalid",
     "package_schema",
     "package_token",
     "proof",
