Fix layout of TransactionTracker

--- a/radix-engine-tests/Cargo.toml
+++ b/radix-engine-tests/Cargo.toml
@@ -71,3 +71,4 @@ flamegraph = []
 resource_tracker = ["dep:radix-engine-profiling", "resources-tracker-macro/resource_tracker", "radix-engine/resource_tracker", "radix-engine-common/resource_tracker", "scrypto-unit/resource_tracker"]
 dump_manifest_to_file = ["transaction/dump_manifest_to_file"]
 rocksdb = ["scrypto-unit/rocksdb"]
+post_run_db_check = ["scrypto-unit/post_run_db_check"]
