Add a scrypto-test crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ members = [
     "scrypto-schema",
     "scrypto-derive",
     "scrypto",
+    "scrypto-test",
     "scrypto-tests",
     "scrypto-unit",
     "transaction",
