Update substate IO

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "btreemap",
         "btreeset",
         "callframe",
+        "Commitable",
         "consensusmanager",
         "debuggability",
         "Decompilation",
