--- a/radix-engine-profiling/resources-tracker-macro/Cargo.toml
+++ b/radix-engine-profiling/resources-tracker-macro/Cargo.toml
@@ -9,7 +9,7 @@ bench = false
 
 [dependencies]
 proc-macro2 = "1.0"
-syn = { version = "1.0.93", features = ["full"] }
+syn = { version = "=1.0.109", features = ["full"] }
 quote = "1.0"
 radix-engine-profiling = { path = "../../radix-engine-profiling" }
 
