Ability to enable and disable kernel modules

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "decompile",
         "decompiled",
         "decompiler",
+        "defaultness",
         "descendents",
         "eddsa",
         "flamegraph",
