--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,8 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: 1.70.0
+    - name: reset registry
+      run: rm -fr ~/.cargo/registry
     - name: Check format
       run: bash ./check.sh
   sbor-unit-tests:
@@ -48,6 +50,8 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: 1.70.0
+    - name: reset registry
+      run: rm -fr ~/.cargo/registry
     - name: Run tests
       run: cargo test
       working-directory: sbor
@@ -70,6 +74,8 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: 1.70.0
+    - name: reset registry
+      run: rm -fr ~/.cargo/registry
     - name: Run tests
       run: cargo test
       working-directory: sbor-tests
@@ -92,6 +98,8 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: 1.70.0
+    - name: reset registry
+      run: rm -fr ~/.cargo/registry
     - name: Run tests
       run: cargo test
       working-directory: scrypto
@@ -117,6 +125,8 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: 1.70.0
+    - name: reset registry
+      run: rm -fr ~/.cargo/registry
     - name: Run tests
       run: cargo test
       working-directory: scrypto-tests
@@ -136,6 +146,8 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: 1.70.0
+    - name: reset registry
+      run: rm -fr ~/.cargo/registry
     - name: Add wasm target
       run: rustup target add wasm32-unknown-unknown
     - name: Add wasm target (nightly)
@@ -168,6 +180,8 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: 1.70.0
+    - name: reset registry
+      run: rm -fr ~/.cargo/registry
     - name: Install dependency
       run: sudo apt-get -y update && sudo apt-get -y install pkg-config libfreetype6-dev libfontconfig1-dev
     - name: Build with resource tracking
@@ -189,6 +203,8 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: 1.70.0
+    - name: reset registry
+      run: rm -fr ~/.cargo/registry
     - name: Install nextest
       uses: taiki-e/install-action@nextest
     - name: Add wasm target
@@ -222,6 +238,8 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: 1.70.0
+    - name: reset registry
+      run: rm -fr ~/.cargo/registry
     - name: Install nextest
       uses: taiki-e/install-action@nextest
     - name: Add wasm target
@@ -251,6 +269,8 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: 1.70.0
+    - name: reset registry
+      run: rm -fr ~/.cargo/registry
     - name: Install nextest
       uses: taiki-e/install-action@nextest
     - name: Add wasm target
@@ -274,6 +294,8 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: 1.70.0
+    - name: reset registry
+      run: rm -fr ~/.cargo/registry
     - name: Install nextest
       uses: taiki-e/install-action@nextest
     - name: Add wasm target
@@ -297,6 +319,8 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: 1.70.0
+    - name: reset registry
+      run: rm -fr ~/.cargo/registry
     - name: Add wasm target
       run: rustup target add wasm32-unknown-unknown
     - name: Run bench
@@ -315,6 +339,8 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: 1.70.0
+    - name: reset registry
+      run: rm -fr ~/.cargo/registry
     - name: Add wasm target
       run: rustup target add wasm32-unknown-unknown
     - name: Run bench
@@ -333,6 +359,8 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: 1.70.0
+    - name: reset registry
+      run: rm -fr ~/.cargo/registry
     - name: Run tests
       run: cargo test
       working-directory: transaction
@@ -365,6 +393,8 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: 1.70.0
+    - name: reset registry
+      run: rm -fr ~/.cargo/registry
     - uses: radixdlt/rust-cache@allow_registry_src_caching
       with:
         prefix-key: ""
@@ -401,6 +431,8 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: 1.70.0
+    - name: reset registry
+      run: rm -fr ~/.cargo/registry
     - uses: radixdlt/rust-cache@allow_registry_src_caching
       with:
         prefix-key: ""
@@ -431,6 +463,8 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: 1.70.0
+    - name: reset registry
+      run: rm -fr ~/.cargo/registry
     - name: Install nextest
       uses: taiki-e/install-action@nextest
     - name: Add wasm target
