--- a/radix-engine-derive/Cargo.toml
+++ b/radix-engine-derive/Cargo.toml
@@ -9,7 +9,7 @@ bench = false
 
 [dependencies]
 proc-macro2 = { version = "1.0.38" }
-syn = { version = "=1.0.109", features = ["full", "extra-traits"] }
+syn = { version = "1.0", features = ["full", "extra-traits"] }
 quote = { version = "1.0.18" }
 sbor-derive-common = { path = "../sbor-derive-common" }
 
