--- a/scrypto-unit/Cargo.toml
+++ b/scrypto-unit/Cargo.toml
@@ -18,7 +18,7 @@ serde_json = { version = "1.0.81" }
 wabt = { version = "0.10.0" }
 
 [features]
-default = ["std", "moka"]
+default = ["std", "moka", "radix-engine/db_checker" ]
 std = ["scrypto/std", "scrypto/serde", "sbor/std", "radix-engine-interface/std", "radix-engine-stores/std", "radix-engine-store-interface/std", "radix-engine-queries/std", "radix-engine/std", "transaction/std", "utils/std"]
 alloc = ["scrypto/alloc", "scrypto/serde", "sbor/alloc", "radix-engine-interface/alloc", "radix-engine-stores/alloc", "radix-engine-store-interface/alloc", "radix-engine-queries/alloc", "radix-engine/alloc", "transaction/alloc", "utils/alloc"]
 resource_tracker = []
