Remove post_run_db_check from wasmer tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -303,7 +303,7 @@ jobs:
     - name: Run tests
       run: |
         cargo nextest run \
-          --features post_run_db_check wasmer \
+          --features wasmer \
           -p radix-engine \
           -p radix-engine-tests
   radix-engine-bench:
