--- a/radix-engine-interface/Cargo.toml
+++ b/radix-engine-interface/Cargo.toml
@@ -18,7 +18,7 @@ lazy_static = "1.4.0"
 const-sha1 = { git = "https://github.com/radixdlt/const-sha1", default-features = false } # Chosen because of its small size and 0 transitive dependencies
 arbitrary = { version = "1.3.0", features = ["derive"], optional = true }
 paste = { version = "1.0.13" }
-url = { version = "=2.4.0" } # Make sure the diff is reviewed before changing the version!
+regex = { version = "=1.9.3" }
 
 [features]
 # You should enable either `std` or `alloc`
