--- a/radix-engine-interface/Cargo.toml
+++ b/radix-engine-interface/Cargo.toml
@@ -18,7 +18,7 @@ lazy_static = "1.4.0"
 const-sha1 = { git = "https://github.com/radixdlt/const-sha1", default-features = false } # Chosen because of its small size and 0 transitive dependencies
 arbitrary = { version = "1.3.0", features = ["derive"], optional = true }
 paste = { version = "1.0.13" }
-regex = { version = "=1.9.3" }
+regex = { version = "=1.9.3", default-features = false }
 
 [features]
 # You should enable either `std` or `alloc`
